Changed project links
Added portfolio website photo and link to project bento grid #1

--- a/index.html
+++ b/index.html
@@ -257,16 +257,16 @@
                 Projects
             </h2>
             <div class="bento-grid">
-                <a href="#" class="bento-item">
-                    <img src="./imgs/bento-1.jpg"
-                    alt="Bento 1" width="100%"/>
+                <a href="https://github.com/dev-par/dev-par.github.io" class="bento-item">
+                    <img src="./imgs/Portfolio-website.jpg"
+                    alt="Portfolio Website" width="100%"/>
                     <figcaption>
-                        Portfolio
+                        Portfolio Website
                     </figcaption>
                 </a>
                 <a href="https://github.com/dev-par/Sudoku-Prog1" class="bento-item">
                     <img src="./imgs/Sudoku.jpg"
-                    alt="Bento 2" width="100%"/>
+                    alt="Sudoku" width="100%"/>
                     <figcaption>
                         Python Sudoku
                     </figcaption>
@@ -274,7 +274,7 @@
                 
                 <a href="https://github.com/dev-par/MineSweeper" class="bento-item">
                     <img src="./imgs/Minesweeper.jpg"
-                    alt="Bento 3" width="100%"/>
+                    alt="Minesweeper" width="100%"/>
                     <figcaption>
                         C++ Minesweeper
                     </figcaption>
