Updated resume file and content in HTML file

--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
                     <p>
                         Sophomore at the University of Florida 
                         majoring in Computer Science, with a passion for
-                         leveraging software applications to solve real-world
-                          problems. <span>Currently, I'm pursuing a machine 
-                            learning certification and working on various projects
-                             over the summer.</span>
+                        leveraging software applications to solve real-world
+                        problems. <span>Currently, I'm in the fall semester of
+                        my sophomore year working through classes such as DSA,
+                        Calc 3, and Intro to Computer Organization
+                          </span>
                     </p>
                     <div class="call-to-action">
-                        <a href="./DevanResume05:24.pdf" class="button black">
+                        <a href="./DevanResume08:24.pdf" class="button black">
                             View Resume
                         </a>
                         <a href="mailto:parekhd@ufl.edu:" class="button white">
@@ -151,12 +152,14 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JavaScript</li>
+                        <li>Flask</li>
                     </ul>
                     <h3>Backend</h3>
                     <ul>
                         <li>Python</li>
                         <li>C++</li>
                         <li>Node.js</li>
+                        <li>SQLAlchemy</li>
                     </ul>
                 </div>
                 <div class="right-column">
@@ -169,11 +172,10 @@
                         high school.
                     </p>
                     <p>
-                        Over the summer, I'm immersing myself 
-                        in software development through various
-                        projects while working towards a machine
-                        learning certification from Deeplearning.ai
-                        and Stanford.
+                        Currently I'm in my sophomore year of 
+                        university, working through classes and 
+                        looking for either research or internship
+                        opportunities. Feel free to reach out!
                     </p>
                 </div>
             </div>
