Updated project section and reorganized css bento box

--- a/index.html
+++ b/index.html
@@ -281,15 +281,21 @@
                         C++ Minesweeper
                     </figcaption>
                 </a>
-                <!--
-                <a href="#" class="bento-item">
-                    <img src="./imgs/bento-4.jpg"
-                    alt="Bento 4" width="100%"/>
+                <a href="https://github.com/dev-par/HousePricePrediction" class="bento-item">
+                    <img src="./imgs/HousePredictorWide.png"
+                    alt="Housing Price Predictor" width="100%"/>
+                    <figcaption>
+                        House Price Estimator
+                    </figcaption>
                 </a>
-                <a href="#" class="bento-item">
-                    <img src="./imgs/bento-5.jpg"
+                <a href="https://www.startingpointblog.com/" class="bento-item">
+                    <img src="./imgs/StartingPointBlog.png"
                     alt="Bento 5" width="100%"/>
+                    <figcaption>
+                        Starting Point Blog
+                    </figcaption>
                 </a>
+                <!--
                 <a href="#" class="bento-item">
                     <img src="./imgs/bento-6.jpg"
                     alt="Bento 6" width="100%"/>
