Updated marquee bar to include flask

--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
                     alt="CSS" width="128"/>
                     <img src="./imgs/javascript.png"
                     alt="JS" width="128"/>
-                    <!--
-                    <img src="./imgs/sass.png"
+                    <img src="./imgs/flask.png"
                     alt="Sass" width="128"/>
-                    -->
                     <img src="./imgs/react.png"
                     alt="React" width="128"/>
                     <img src="./imgs/nextjs.png"
@@ -114,10 +112,10 @@
                     alt="CSS" width="128"/>
                     <img src="./imgs/javascript.png"
                     alt="JS" width="128"/>
-                    <!--
-                    <img src="./imgs/sass.png"
+                    
+                    <img src="./imgs/flask.png"
                     alt="Sass" width="128"/>
-                    -->
+
                     <img src="./imgs/react.png"
                     alt="React" width="128"/>
                     <img src="./imgs/nextjs.png"
