Updated UF image url

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <article>
                     <figure>
                         <div>
-                            <img src="./imgs/UF photo.jpg" alt="UF"
+                            <img src="./imgs/UF photo.jpeg" alt="UF"
                             width=100%/>
                             <figcaption>
                                 University of Florida
