Updated content and corrected spacing for small viewport

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="mailto:parekhd@ufl.edu:" class="button">Contact Me</a>
+                    <a href="mailto:devan.m.parekh@gmail.com:" class="button">Contact Me</a>
                 </li>
             </ul>
             <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -53,9 +53,9 @@
                         Sophomore at the University of Florida 
                         majoring in Computer Science, with a passion for
                         leveraging software applications to solve real-world
-                        problems. <span>Currently, I'm in the fall semester of
-                        my sophomore year working through classes such as DSA,
-                        Calc 3, and Intro to Computer Organization
+                        problems. <span>Currently I'm working through coursework
+                        and various personal projects spanning from web dev to 
+                        machine learning, feel free to check some out below!
                           </span>
                     </p>
                     <div class="call-to-action">
@@ -169,11 +169,12 @@
                         a passion I turned into a business during
                         high school.
                     </p>
-                    <p>
-                        Currently I'm in my sophomore year of 
-                        university, working through classes and 
-                        looking for either research or internship
-                        opportunities. Feel free to reach out!
+                    <p> 
+                        I am highly interested in full-stack 
+                        development and machine learning applications,
+                        and I'm actively seeking opportunities to expand
+                        my knowledge in these areas though either 
+                        research or intership.
                     </p>
                 </div>
             </div>
@@ -198,8 +199,9 @@
                     <div>2023-2027</div>
                     <ul>
                     <li>Currently a sophomore with completed
-                    coursework in Calculus 2, Python, C++, 
-                    and Discrete Structures.</li>
+                    coursework in calculus, advanced programming, 
+                    and discrete structures.
+                </li>
                      <li>Involved in 
                     organizations such as Sigma Phi Epsilon, 
                     ACM, ISA, and SASE. 
