Updated Resume File

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                           </span>
                     </p>
                     <div class="call-to-action">
-                        <a href="./DevanResumeUpdated08:24.pdf" class="button black">
+                        <a href="./DevanResume10:24.pdf" class="button black">
                             View Resume
                         </a>
                         <a href="mailto:parekhd@ufl.edu:" class="button white">
