Updated resume, contact email, and projects

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                           </span>
                     </p>
                     <div class="call-to-action">
-                        <a href="./DevanResume10:24.pdf" class="button black">
+                        <a href="./DevanResumeHolistic-S2024.pdf" class="button black">
                             View Resume
                         </a>
-                        <a href="mailto:parekhd@ufl.edu:" class="button white">
+                        <a href="mailto:devan.m.parekh@gmail.com:" class="button white">
                             Contact Me
                         </a>
                     </div>
@@ -259,11 +259,11 @@
                 Projects
             </h2>
             <div class="bento-grid">
-                <a href="https://github.com/dev-par/dev-par.github.io" class="bento-item">
-                    <img src="./imgs/Portfolio-website.jpg"
-                    alt="Portfolio Website" width="100%"/>
+                <a href="https://www.youtube.com/watch?v=cK7jSwdpscI" class="bento-item">
+                    <img src="./imgs/shortestPathSS.png"
+                    alt="Shortest Path in Northeast Florida" width="100%"/>
                     <figcaption>
-                        Portfolio Website
+                        Shortest Path in Northeast Florida
                     </figcaption>
                 </a>
                 <a href="https://github.com/dev-par/Sudoku-Prog1" class="bento-item">
