Made content and styling updates, prepared to add study abroad page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="mailto:devan.m.parekh@gmail.com:" class="button">Contact Me</a>
+                    <a href="mailto:devan.m.parekh@gmail.com" class="button">Contact Me</a>
                 </li>
             </ul>
             <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -62,7 +62,7 @@
                         <a href="./DevanResumeHolistic-S2024.pdf" class="button black">
                             View Resume
                         </a>
-                        <a href="mailto:devan.m.parekh@gmail.com:" class="button white">
+                        <a href="mailto:devan.m.parekh@gmail.com" class="button white">
                             Contact Me
                         </a>
                     </div>
@@ -147,34 +147,35 @@
                 <div class="left-column">
                     <h3>Frontend</h3>
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
+                        <li>React</li>
                         <li>JavaScript</li>
-                        <li>Flask</li>
+                        <li>Tailwind</li>
                     </ul>
                     <h3>Backend</h3>
                     <ul>
                         <li>Python</li>
                         <li>C++</li>
-                        <li>Node.js</li>
-                        <li>SQLAlchemy</li>
+                        <li>Flask</li>
+                        <li>Django</li>
+                        <li>Next.js</li>
+                        <li>PostgreSQL</li>
                     </ul>
                 </div>
                 <div class="right-column">
                     <h3>A bit about me</h3>
-                    <p>I'm Devan Parekh, a student at the 
-                        University of Florida. I love 
-                        weightlifting and enjoy any watersport
-                        imaginable. I'm also a huge sneakerhead,
-                        a passion I turned into a business during
-                        high school.
+                    <p>I'm Devan Parekh, a rising junior at the 
+                        University of Florida. I recently finished
+                        my internship at Safe Cities Africa
+                        in Cape Town where my team and I worked on building
+                        a project management platform for the organization.
                     </p>
                     <p> 
-                        I am highly interested in full-stack 
-                        development and machine learning applications,
-                        and I'm actively seeking opportunities to expand
-                        my knowledge in these areas though either 
-                        research or intership.
+                        I'm interested in almost anything tech realted
+                        that helps solve real-world problems.
+                        I have experience in web development, an array of 
+                        projects, and a strong foundation in software development
+                        principles. Curently I'm working on a few personal projects
+                        and looking for my next big challenge.
                     </p>
                 </div>
             </div>
@@ -188,6 +189,30 @@
                 <article>
                     <figure>
                         <div>
+                            <img src="./imgs/workplace-3.jpg" alt="Workplace1"
+                            width=100%/>
+                            <figcaption>
+                                EDU Africa
+                            </figcaption>
+                        </div>
+                    </figure>
+                    <h3>Safe Cities - EDU Africa</h3>
+                    <div>Summer 2025</div>
+                    <ul>
+                        <li>
+                            Built a custom project management platform for a nonprofit 
+                            supporting underserved communities in Africa.
+                        </li>
+                        <li>
+                            Collaborated with a team of 4 using the T3 
+                            stack (TypeScript, Next.js, Tailwind CSS, and Drizzle).
+                        </li>
+                    </ul>
+                    <a href="studyAbroad.html" class="linkToStudyAbroad">Learn More</a>
+                </article>
+                <article>
+                    <figure>
+                        <div>
                             <img src="./imgs/UF photo.jpeg" alt="UF"
                             width=100%/>
                             <figcaption>
@@ -198,13 +223,16 @@
                     <h3>University of Florida</h3>
                     <div>2023-2027</div>
                     <ul>
-                    <li>Currently a sophomore with completed
-                    coursework in calculus, advanced programming, 
-                    and discrete structures.
+                    <li>Currently a rising Junior with completed
+                    coursework in DSA, Software Engineering,
+                    Advanced Programming, and Discrete Structures.
                 </li>
-                     <li>Involved in 
-                    organizations such as Sigma Phi Epsilon, 
-                    ACM, ISA, and SASE. 
+                     <li>Involved in organizations such as
+                        <a href="https://florida.sigep.org">SigEp,</a>
+                        <a href=https://uf-acm.com> ACM,</a>
+                        <a href="https://www.instagram.com/ufproductspace/"> Product Space, </a>
+                        and
+                        <a href="https://colorstack-website-frontend.vercel.app/">Colorstack</a>
                     </li>
                 </ul>
                 </article>
@@ -214,11 +242,11 @@
                             <img src="./imgs/PR&R-logo.jpg" alt="Workplace1"
                             width=100%/>
                             <figcaption>
-                                Parekh Restoration and Revival
+                                Parekh R&R
                             </figcaption>
                         </div>
                     </figure>
-                    <h3>Parekh Restoration and Revival</h3>
+                    <h3>Parekh R&R</h3>
                     <div>2021-2023</div>
                     <ul>
                         <li>
@@ -228,29 +256,11 @@
                         </li>
                         
                         <li>
-                        I'd purchase and restore these sneakers,
-                        then resell them through various channels.
+                        I purchased, restored, and sold over 350 pairs of sneakers,
+                        generating over $45,000 in lifetime revenue. 
                     </li>
                     </ul>
                 </article>
-                <!--
-                <article>
-                    <figure>
-                        <div>
-                            <img src="./imgs/workplace-3.jpg" alt="Workplace1"
-                            width=100%/>
-                            <figcaption>
-                                Workplace - 3
-                            </figcaption>
-                        </div>
-                    </figure>
-                    <h3>Workplace - 3</h3>
-                    <div>2000-2020</div>
-                    <p>This is an example description
-                        for a workplace.
-                    </p>
-                </article>
-            -->
             </div>
         </section>
         <section id="projects" class="bento">
@@ -270,7 +280,7 @@
                     <img src="./imgs/Sudoku.jpg"
                     alt="Sudoku" width="100%"/>
                     <figcaption>
-                        Python Sudoku
+                        Sudoku
                     </figcaption>
                 </a>
                 
@@ -278,7 +288,7 @@
                     <img src="./imgs/Minesweeper.jpg"
                     alt="Minesweeper" width="100%"/>
                     <figcaption>
-                        C++ Minesweeper
+                        Minesweeper
                     </figcaption>
                 </a>
                 <a href="https://github.com/dev-par/HousePricePrediction" class="bento-item">
