--- a/studyAbroad.html
+++ b/studyAbroad.html
@@ -9,7 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Caveat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="./scripts.js"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="icon" type="image/jpg" href="./imgs/Dev-icon1.JPG">
 </head>
 <body>
@@ -103,26 +107,21 @@
                         <p>This experience taught me the value of adaptability, open-mindedness, and the importance of community in global projects. (Replace with your real reflection)</p>
                     </div>
                 </div>
-                <div style="flex:1; min-width:220px;">
-                    <div class="abroad-gallery">
-                        <div class="abroad-polaroid fadeIn">
-                            <img src="./imgs/Portfolio-website.jpg" alt="Cape Town Project"/>
-                            <div class="caption">Project Launch Day</div>
-                        </div>
-                        <div class="abroad-polaroid fadeIn">
-                            <img src="./imgs/HousePredictor.png" alt="Teamwork"/>
-                            <div class="caption">Team Collaboration</div>
-                        </div>
-                        <div class="abroad-polaroid fadeIn">
-                            <img src="./imgs/Dev-Headshot.png" alt="Reflection"/>
-                            <div class="caption">Personal Growth</div>
-                        </div>
-                        <div class="abroad-polaroid fadeIn">
-                            <img src="./imgs/StartingPointBlog.png" alt="Adventure"/>
-                            <div class="caption">Adventure Time</div>
-                        </div>
-                    </div>
+            </div>
+        </section>
+
+        <section class="abroad-section container" style="margin-top:18px; margin-bottom:18px;">
+            <!-- Swiper -->
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="./imgs/UF photo.jpeg" alt="Photo 1" /></div>
+                    <div class="swiper-slide"><img src="./imgs/Portfolio-website.jpg" alt="Photo 2" /></div>
+                    <div class="swiper-slide"><img src="./imgs/HousePredictor.png" alt="Photo 3" /></div>
+                    <div class="swiper-slide"><img src="./imgs/StartingPointBlog.png" alt="Photo 4" /></div>
                 </div>
+                <!-- Add Arrows -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
             </div>
         </section>
 
