Finished study abroad page and added pictures

--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
                 <article>
                     <figure>
                         <div>
-                            <img src="./imgs/workplace-3.jpg" alt="Workplace1"
+                            <img src="./imgs/groupPhoto.jpg" alt="SA-group-photo"
                             width=100%/>
                             <figcaption>
                                 EDU Africa
                             </figcaption>
                         </div>
                     </figure>
-                    <h3>Safe Cities - EDU Africa</h3>
+                    <h3>SWE Intern @ EDU Africa</h3>
                     <div>Summer 2025</div>
                     <ul>
                         <li>
