--- a/studyAbroad.html
+++ b/studyAbroad.html
@@ -51,11 +51,11 @@
                     Study Abroad: Cape Town, South Africa
                 </h1>
                 <div class="abroad-quote" style="animation-delay:0.2s;">
-                    <span style="font-size:1.3em;">"Travel is the only thing you buy that makes you richer."</span>
+                    <span style="font-size:1.3em;">"Education is the most powerful weapon which you can use to change the world." - Nelson Mandela</span>
                 </div>
                 <div class="abroad-card" style="background:rgba(255,255,255,0.92); color:var(--blu); margin-top:18px;">
                     <strong style="font-size:1.1em;">Project Description:</strong><br/>
-                    During my study abroad in Cape Town, I collaborated with local organizations to develop a project management platform for a nonprofit. The experience combined software development, teamwork, and cultural immersion. (Replace with your real description)
+                    During my study abroad in Cape Town, I collaborated with Safe Cities Africa, a youth empowerment nonprofit, to develop their project management system. We transformed their basic Google Drive setup into a sophisticated platform with permission controls, document management, and team collaboration features.
                 </div>
             </div>
             <div class="hero-img">
@@ -66,21 +66,22 @@
         <section class="abroad-section container">
             <div style="display:flex; flex-wrap:wrap; gap:32px; justify-content:center;">
                 <div class="abroad-card fadeIn" style="flex:1; min-width:260px;">
-                    <h3>🌍 Global Learning & Skills</h3>
+                    <h3>Global Learning & Skills</h3>
                     <ul>
-                        <li>Cross-cultural communication</li>
-                        <li>Project management in a global context</li>
-                        <li>Technical skills: Next.js, TypeScript, Tailwind CSS</li>
-                        <li>Teamwork and leadership</li>
-                        <li>Problem-solving in real-world settings</li>
+                        <li>Full-stack development with T3 Stack (TypeScript, Tailwind, tRPC)</li>
+                        <li>Cross-cultural communication and community engagement</li>
+                        <li>Project management in a global social impact context</li>
+                        <li>User permission system design and implementation</li>
+                        <li>Real-world problem-solving in resource-constrained environments</li>
                     </ul>
                 </div>
                 <div class="abroad-card fadeIn" style="flex:1; min-width:260px;">
-                    <h3>🏆 Achievements</h3>
+                    <h3>Achievements</h3>
                     <ul>
-                        <li>Launched a working MVP for the nonprofit</li>
-                        <li>Presented project to local stakeholders</li>
-                        <li>Received positive feedback from EDU Africa</li>
+                        <li>Developed and deployed a full-featured project management system</li>
+                        <li>Successfully onboarded 50+ users across Safe Cities Africa</li>
+                        <li>Received outstanding feedback from organization staff</li>
+                        <li>Transformed document management and team collaboration</li>
                     </ul>
                 </div>
             </div>
@@ -88,50 +89,55 @@
 
         <section class="abroad-section container">
             <h2 style="margin-bottom:10px; color:var(--blu);">Highlights & Reflections</h2>
-            <div style="display:flex; flex-wrap:wrap; gap:32px;">
-                <div style="flex:2; min-width:320px;">
-                    <div class="abroad-card fadeIn">
-                        <h3>🌄 Most Memorable Experience</h3>
-                        <p>Hiking Table Mountain with my team and seeing Cape Town from above. The sense of accomplishment and camaraderie was unforgettable. (Replace with your real story)</p>
-                    </div>
-                    <div class="abroad-card fadeIn">
-                        <h3>✨ Highlights</h3>
-                        <ul>
-                            <li>Working with local students and professionals</li>
-                            <li>Exploring Cape Town's vibrant culture and history</li>
-                            <li>Weekend trips to Robben Island and the Cape of Good Hope</li>
-                        </ul>
-                    </div>
-                    <div class="abroad-card fadeIn">
-                        <h3>💡 Reflections</h3>
-                        <p>This experience taught me the value of adaptability, open-mindedness, and the importance of community in global projects. (Replace with your real reflection)</p>
+            <div style="display:flex; flex-direction: row;"
+                <div style="display:flex; flex-wrap:wrap; gap:32px;">
+                    <div style="flex:2; min-width:320px;">
+                        <div class="abroad-card fadeIn">
+                            <h3>Most Memorable Experience</h3>
+                            <p>Visiting Curro High School in Delft was an unforgettable experience. The opportunity to connect with, learn from, and play basketball with the students there was truly inspiring. Their perspectives and aspirations gave real meaning to our work with Safe Cities Africa and their youth empowerment initiatives.</p>
+                        </div>
+                        <div class="abroad-card fadeIn">
+                            <h3>Highlights</h3>
+                            <ul>
+                                <li>Experiencing the culture and views from not only Cape Town but also Durban and St. Lucia.</li>
+                                <li>Meeting and working with the Safe Cities Africa team.</li>
+                                <li>Weekend excursions hiking, paragliding, sandboarding and more.</li>
+                            </ul>
+                        </div>
+                        <div class="abroad-card fadeIn">
+                            <h3>Reflections</h3>
+                            <p>Working with Safe Cities Africa showed me how technology can directly impact community development and youth empowerment. The experience reinforced that successful solutions must be built with a deep understanding of local needs and constraints. Seeing our project management system help streamline their important work was incredibly rewarding.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="abroad-section container" style="margin-top:18px; margin-bottom:18px;">
-            <!-- Swiper -->
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="./imgs/UF photo.jpeg" alt="Photo 1" /></div>
-                    <div class="swiper-slide"><img src="./imgs/Portfolio-website.jpg" alt="Photo 2" /></div>
-                    <div class="swiper-slide"><img src="./imgs/HousePredictor.png" alt="Photo 3" /></div>
-                    <div class="swiper-slide"><img src="./imgs/StartingPointBlog.png" alt="Photo 4" /></div>
+                <!-- Swiper -->
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="./imgs/groupPhoto.jpg" alt="Photo 1" /></div>
+                        <div class="swiper-slide"><img src="./imgs/penguin.jpg" alt="Photo 2" /></div>
+                        <div class="swiper-slide"><img src="./imgs/basketballWithHighSchool.jpg" alt="Photo 3" /></div>
+                        <div class="swiper-slide"><img src="./imgs/zebras.JPG" alt="Photo 4" /></div>
+                        <div class="swiper-slide"><img src="./imgs/atvs.JPG" alt="Photo 5" /></div>
+                        <div class="swiper-slide"><img src="./imgs/hippo.JPG" alt="Photo 6" /></div>
+                        <div class="swiper-slide"><img src="./imgs/paragliding.JPG" alt="Photo 7" /></div>
+                        <div class="swiper-slide"><img src="./imgs/snake.jpg" alt="Photo 8" /></div>
+                        <div class="swiper-slide"><img src="./imgs/view.JPG" alt="Photo 9" /></div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="abroad-section container">
+            <h2 style="margin-bottom:10px; color:var(--blu);">Lessons & Takeaways</h2>
             <div style="display:flex; flex-wrap:wrap; gap:32px; justify-content:center;">
-                <div class="abroad-card fadeIn" style="flex:2; min-width:320px;">
-                    <h3>📝 Lessons Learned, Advice & Tips</h3>
+                <div class="abroad-card fadeIn" style="flex:1; min-width:260px;">
+                    <h3>Key Learnings</h3>
                     <ul>
-                        <li>Embrace every opportunity to learn from others</li>
-                        <li>Be proactive in communication—ask questions!</li>
-                        <li>Document your journey with photos and notes</li>
-                        <li>Try local foods and participate in cultural events</li>
-                        <li>Stay open-minded and flexible</li>
+                        <li>Cultural sensitivity is crucial in global software development - understanding local needs and perspectives leads to better solutions.</li>
+                        <li>Regular communication with stakeholders ensures the project stays aligned with user needs and expectations.</li>
+                        <li>Documentation is key - both for technical progress and personal growth throughout the journey.</li>
+                        <li>Cultural immersion enhances project understanding and creates stronger community connections.</li>
+                        <li>Flexibility in development approach is essential when working with different infrastructure and user needs.</li>
                     </ul>
                 </div>
             </div>
@@ -144,7 +150,6 @@
                     <li>Ping Neo</li>
                     <li>Naomi Harrell</li>
                     <li>EDU Africa</li>
-                    <li>Serving Organization</li>
                 </ul>
             </div>
         </section>
